# murasame-server-advance

./: Cargo.toml
auth_core/: Cargo.toml
global_state/: Cargo.toml
mail_sender/: Cargo.toml
migration/: migration_00001.sql
proto/email_sender/: send_register_verify_email.proto  send_verify_email.proto
proto/shop/: cart.proto  invoice.proto  order.proto  user_balance.proto  user_balance_change.proto
proto/user_auth/: check_mfa.proto  delete_account.proto  email_login.proto  email_register.proto  shared_mfa.proto  update_email.proto  update_password.proto
proto/user_query/: affiliate.proto
repository/: Cargo.toml
repository/src/: affiliate_old.rs  lib.rs
repository/src/affiliate/: log.rs  mod.rs  statics.rs
