[workspace]
resolver = "2"
members = [ "global_state","repository"]



[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0.89"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1.19"
serde_json = "1.0"
uuid = { version = "1.10", features = ["serde", "v4"] }
tracing = "0.1"
chrono = "0.4"
redis = { version = "0.27", features = ["tokio-rustls-comp", "aio"] }

[workspace.dependencies.lettre]
version = "0.11.9"
default-features = false
features = ["tokio1-rustls-tls", "smtp-transport", "builder"]

[workspace.dependencies.sqlx]
version = "0.8"
features = ["runtime-tokio-rustls"]
