[workspace]
members = [ "auth_core","mail_sender"]
resolver = "2"

[workspace.dependencies.sea-orm]
version = "1.1.0"
features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "uuid",
    "debug-print",
    "with-uuid",
    "with-chrono",
    "postgres-array",
    "with-rust_decimal",
    "mock"
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0.89"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1.19"
serde_json = "1.0"
uuid = { version = "1.10", features = ["serde", "v4"] }
tracing = "0.1"
chrono = "0.4"
poem-openapi = "5.1.1"
redis = { version = "0.27", features = ["tokio-rustls-comp", "aio"] }
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"